test/valid/test4.4.puzzle
# This puzzle is solvable
4
11  3  7 15
 1  5 10 14
 2 12  4  0
13  8  9  6
