test/invalid/test3.2.puzzle
# This puzzle is solvable
3
0 2
3 8
7 6
